--- a/BlazorTool.Client/Pages/ActivitiesPage.razor
+++ b/BlazorTool.Client/Pages/ActivitiesPage.razor
@@ -129,7 +129,9 @@
                 <span>@Localizer["Scheduler_ScheduledOrders"] @Appointments.Count()</span>
                 <TelerikButton OnClick="@(async ()=> await HardLoadData())" Size="Small" ThemeColor="@ThemeConstants.Button.ThemeColor.Tertiary">@IconHtmlHelper.Refresh(20) @Localizer["Scheduler_ReloadAllData"]</TelerikButton>
             </div>
-
+            <div class="toolbar-left" style="display:flex; gap:10px; align-items:center;">
+                <span>@Localizer["ActivityList_TotalWorkload"] @TotalWorkloadHours h</span>
+            </div>
             <div class="toolbar-right">
                 <TelerikButton Class="@(showSettings ? "btn btn-inset" : "")" OnClick="@(() => showSettings = !showSettings)">
                     <TelerikSvgIcon Icon="@SvgIcon.Gear"></TelerikSvgIcon>
@@ -224,11 +226,11 @@
                           Id="Scheduler1"
                           Data="@Appointments"
                           @ref="SchedulerRef"
-                          @bind-Date="SchedulerDate"
                           View="@CurrentView"
                           ViewChanged="@OnViewChanged"
                           AllowCreate="true"
                           AllowUpdate="true"
+                          DateChanged="@DateChangedHandler"
                           OnUpdate="@OnUpdateAppointment"
                           OnEdit="@EditHandler"
                           OnCellRender="@OnSchedulerCellRender"
@@ -426,7 +428,6 @@
     private List<ActivityAppointment> _allAppointments { get; set; } = new();
     private TelerikScheduler<ActivityAppointment>? SchedulerRef { get; set; }
     private TelerikPopup? PopupRef { get; set; }
-    private DateTime SchedulerDate { get; set; } = DateTime.Today;
     private SchedulerView CurrentView { get; set; } = SchedulerView.Month;
     private DateTime DayStart => new DateTime(2000, 1, 1, 7, 0, 0);
     private DateTime DayEnd => new DateTime(2000, 1, 1, 19, 0, 0);
@@ -495,26 +496,8 @@
     private TimeSpan HardReloadInterval { get; set; }
     private BlazorTool.Client.Components.Timer? autoReloadTimer;
     private string timerSetVisibility = "none";
+    private decimal TotalWorkloadHours = 0;
     #endregion 
-
-   
-    private int CalculateNumberOfDays(int desiredWorkDays)
-    {
-        int totalDays = 0;
-        int workDaysCount = 0;
-        DateTime currentDate = SchedulerDate; // Start from the current scheduler date
-
-        while (workDaysCount < desiredWorkDays)
-        {
-            if (currentDate.DayOfWeek != DayOfWeek.Saturday && currentDate.DayOfWeek != DayOfWeek.Sunday)
-            {
-                workDaysCount++;
-            }
-            totalDays++;
-            currentDate = currentDate.AddDays(1);
-        }
-        return totalDays;
-    }
 
     protected override async Task OnInitializedAsync()
     {
@@ -823,11 +806,63 @@
         UpdateEventArgs = null;
     }
     private void OnViewChanged(SchedulerView view)
-    {
+    {        
         CurrentView = view;
+        RecalculateWorkLoad(SchedulerRef?.Date ?? DateTime.Now);
         SaveFiltersState();
     }
 
+    private int CalculateNumberOfDays(int desiredWorkDays)
+    {
+        int totalDays = 0;
+        int workDaysCount = 0;
+        DateTime currentDate = SchedulerRef?.Date ?? DateTime.Now; // Start from the current scheduler date
+
+        while (workDaysCount < desiredWorkDays)
+        {
+            if (currentDate.DayOfWeek != DayOfWeek.Saturday && currentDate.DayOfWeek != DayOfWeek.Sunday)
+            {
+                workDaysCount++;
+            }
+            totalDays++;
+            currentDate = currentDate.AddDays(1);
+        }
+        return totalDays;
+    }
+
+    private void RecalculateWorkLoad(DateTime currDate)
+    {
+        TotalWorkloadHours = 0;
+        if (CurrentView == SchedulerView.Day)
+        {
+            var endOfDay = currDate.Date.AddHours(24);
+            var daysActivities = activities.Where(a => a.AddDate.Date >= currDate.Date && a.AddDate.Date < endOfDay).ToList();
+            TotalWorkloadHours = daysActivities.Sum(a => a.WorkLoad);
+            return;
+        }
+
+        if (CurrentView == SchedulerView.Week)
+        {
+            var weekStart = currDate.Date.AddDays(-(int)currDate.DayOfWeek + (int)DayOfWeek.Monday);
+            var weekEnd = weekStart.AddDays(7);
+            var weekActivities = activities.Where(a => a.AddDate.Date >= weekStart && a.AddDate.Date < weekEnd).ToList();
+            TotalWorkloadHours = weekActivities.Sum(a => a.WorkLoad);
+            return;
+        }
+
+        if (CurrentView == SchedulerView.MultiDay)
+        {
+            var multiDayEnd = currDate.Date.AddDays(CalculateNumberOfDays(numberOfWorkDays ?? 10));
+            var multiDayActivities = activities.Where(a => a.AddDate.Date >= currDate.Date && a.AddDate.Date < multiDayEnd).ToList();
+            TotalWorkloadHours = multiDayActivities.Sum(a => a.WorkLoad);
+            return;
+        }
+    }
+
+    void DateChangedHandler(DateTime currDate)
+    {
+        RecalculateWorkLoad(currDate);
+    }
     private async Task OnClearFilters()
     {
         selectedDepartments = new List<string> ();
